<resources>
    <string name="app_name">Sentra Defend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_file">Неизвестный файл</string>
    <string name="error_scan">Ошибка сканирования: %1$s</string>
    <string name="url">Введите URL</string>
    <string name="could_not_read">Не удалось прочитать файл </string>
    <string name="to_share">Поделиться результатом сканирования через:</string>
    <string name="request_error">Ошибка запроса: %1$s</string>
    <string name="choice">Выберите приложения</string>
    <string name="name">Название приложения</string>
    <string name="no_threats">Никаких угроз</string>
    <string name="share">Поделиться</string>
    <string name="time">14:20</string>
    <string name="data">2 Jan 3024</string>
    <string name="scan">Сканировать</string>
    <string name="safe">Безопасен</string>
    <string name="details">Детали проверки будут тут</string>
    <string name="search">Поиск приложения</string>
    <string name="scan_the_selected">Сканировать выбранные</string>
    <string name="scan_the_URL">Сканировать URL</string>
    <string name="apps">Сканировать APPS</string>
    <string name="scan_the_file">Сканировать файл</string>
    <string name="history">История</string>
    <string name="check">Проверка URL: %1$s</string>
    <string name="expectation">Ожидание результата...</string>
    <string name="data_error">Ошибка: нет данных</string>
    <string name="file_error">Ошибка: нет данных файла</string>
    <string name="checking_the_file">Проверка файла: %1$s</string>
    <string name="package_error">Ошибка: нет данных пакета</string>
    <string name="checking_the_application">Проверка приложения: %1$s</string>
    <string name="analysis">Анализ по названию пакета: %1$s</string>
    <string name="dangerous">⚠️ Опасный</string>
    <string name="suspicious">⚠️ Подозрительный</string>
    <string name="safery">✔ Безопасный</string>
    <string name="result_error">Ошибка получения результата</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="there_is_no_response">⏳ Ответ не получен</string>
    <string name="try_again_later">Попробуйте повторно позже</string>
    <string name="scan_error">Ошибка сканирования</string>
    <string name="main">Главная</string>
    <string name="api_key">API ключ</string>
    <string name="theme">Тема</string>
    <string name="reset_settings">Сброс настроек</string>
    <string name="setting">Настройки</string>
    <string name="theme_light">Тема: Светлая</string>
    <string name="theme_dark">Тема: Тёмная</string>
    <string name="subject_system">Тема: Системная</string>
    <string name="settings_reset">Настройки сброшены</string>
    <string name="cancel">Отмена</string>
    <string name="key_saved">Ключ сохранён</string>
    <string name="save">Сохранить</string>
    <string name="entering_the_key">Введите API ключ</string>
    <string name="choosing_a_theme">Выберите тему</string>
    <string name="light">Светлая</string>
    <string name="dark">Тёмная</string>
    <string name="system">Системная</string>
    <string name="notifications">Уведомления о результатах сканирования</string>
    <string name="сlear_the_history">Отчистить историю</string>
    <string name="сlearing_the_history">Очистка истории</string>
    <string name="question">Вы уверены, что хотите удалить всю историю сканирований?</string>
    <string name="yes">Да</string>
</resources>