<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen"
    android:id="@+id/fragment_scan"
    android:padding="16dp"
    tools:context=".presentation.view.fragments.ScanFragment">


    <LinearLayout
        android:id="@+id/bottom_screen"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/scan_url"
            style="@style/RoundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/scan_the_URL" />


        <Button
            android:id="@+id/scan_apps"
            style="@style/RoundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/apps" />

        <Button
            android:id="@+id/scan_fils"
            style="@style/RoundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/scan_the_file" />

    </LinearLayout>

    <ImageView
        android:id="@+id/emblema"
        android:layout_width="400dp"
        android:layout_height="421dp"
        android:paddingTop="11dp"
        android:scaleType="centerCrop"
        android:src="@drawable/emblema4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>